--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@
     font-family: 'Poppins', sans-serif;
 }
 body{
-    margin:0
+    margin:0;
+    height: 100%;
 }
 h1{
     font-size: 50px;
@@ -46,9 +47,51 @@ h1{
     background-repeat: no-repeat;
     margin-bottom: 120px;
 }
+.header1{
+    padding-top: 150px ;
+}
+
+
+
 /* Header 2 starts here */
 .header2{
     background-image: url(imgs/dream-bg.png);
     background-repeat: no-repeat;
     background-position-x: 100%;
+}
+/* Header 3 starts */
+.text-exp{
+    text-align: center;
+    margin-bottom: 80px;
+}
+.header3{
+    margin-top: 100px;
+    background-image: url(imgs/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position-y: 40%;
+    margin-bottom: 100px;
+}
+.only-card{
+    display:flex;
+    justify-content: space-around;
+}
+.card{
+    width:40%;
+    height:;
+    padding: 0px 30px 30px 30px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 70px .1px rgba(0,0,0,0.68);
+}
+.card h1{
+    font-size: 36px;
+}
+.card2{
+    border-left: 8px solid; 
+    border-image: linear-gradient(rgb(37, 144, 194),rgba(0, 0, 0, 0));
+    border-image-slice: 1;
+}
+.card1{
+    border-left: 8px solid; 
+    border-image: linear-gradient(rgb(156, 53, 35),rgba(0, 0, 0, 0));
+    border-image-slice: 1;
 }
